# multisig

./: .editorconfig  .gitignore  README.md  flake.nix  instructions.org  mocha.opts  multisig.nix  package-lock.json  package.json  tsconfig.json
client/: index.ts
programs/multisig/: Cargo.toml
programs/multisig/src/: lib.rs
tests/: multisigApprovalTest.ts  multisigCancelTransactionlTest.ts  multisigChangeThresholdTest.ts  multisigCreationTest.ts  multisigExecuteTransactionTest.ts  multisigSetOwnerAndChangeThresholdTest.ts  multisigSetOwnerTest.ts  multisigTransactionAccountTest.ts
tests/utils/: before.ts  multisigDsl.ts
